--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "check-format": "prettier --check ."
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.46",
+    "@pinecone-database/pinecone": "^6.1.3",
+    "ai": "^5.0.113",
     "clsx": "^2.1.1",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^2.4.5",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0"
@@ -21,6 +25,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prettier": "^3.7.4",
