--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
-    "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
