--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.46",
+    "@ai-sdk/react": "^2.0.115",
     "@pinecone-database/pinecone": "^6.1.3",
     "ai": "^5.0.113",
     "clsx": "^2.1.1",
